--- a/HookMemory/Movie/View/SearchView.xib
+++ b/HookMemory/Movie/View/SearchView.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,32 +15,32 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uUg-mt-TRJ">
-                    <rect key="frame" x="16" y="31" width="361" height="44"/>
+                    <rect key="frame" x="16" y="49" width="361" height="40"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lI-VG-euJ">
-                            <rect key="frame" x="8" y="11.666666666666664" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Movies &amp; TV Shows" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5lI-VG-euJ">
+                            <rect key="frame" x="16" y="13" width="154" height="14.333333333333336"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="delete" translatesAutoresizingMaskIntoConstraints="NO" id="1n7-4X-0P1">
-                            <rect key="frame" x="329" y="10" width="24" height="24"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movie_search" translatesAutoresizingMaskIntoConstraints="NO" id="1n7-4X-0P1">
+                            <rect key="frame" x="331" y="13" width="14" height="14"/>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" red="0.27843137254901962" green="0.22352941176470587" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="5lI-VG-euJ" firstAttribute="leading" secondItem="uUg-mt-TRJ" secondAttribute="leading" constant="8" id="6yd-sn-qN4"/>
-                        <constraint firstAttribute="trailing" secondItem="1n7-4X-0P1" secondAttribute="trailing" constant="8" id="A2s-vQ-HUW"/>
+                        <constraint firstItem="5lI-VG-euJ" firstAttribute="leading" secondItem="uUg-mt-TRJ" secondAttribute="leading" constant="16" id="6yd-sn-qN4"/>
+                        <constraint firstAttribute="trailing" secondItem="1n7-4X-0P1" secondAttribute="trailing" constant="16" id="A2s-vQ-HUW"/>
                         <constraint firstItem="5lI-VG-euJ" firstAttribute="centerY" secondItem="uUg-mt-TRJ" secondAttribute="centerY" id="Xfs-Vs-Ims"/>
                         <constraint firstItem="1n7-4X-0P1" firstAttribute="centerY" secondItem="uUg-mt-TRJ" secondAttribute="centerY" id="xoq-7D-odo"/>
-                        <constraint firstAttribute="height" constant="44" id="yhh-U8-jfV"/>
+                        <constraint firstAttribute="height" constant="40" id="yhh-U8-jfV"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="viewFlipsideBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="uUg-mt-TRJ" secondAttribute="bottom" constant="16" id="BUz-r2-lLl"/>
+                <constraint firstAttribute="bottom" secondItem="uUg-mt-TRJ" secondAttribute="bottom" constant="2" id="BUz-r2-lLl"/>
                 <constraint firstItem="uUg-mt-TRJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="Ntl-cG-Vei"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="uUg-mt-TRJ" secondAttribute="trailing" constant="16" id="d1E-be-rne"/>
             </constraints>
@@ -55,10 +54,7 @@
         </view>
     </objects>
     <resources>
-        <image name="delete" width="24" height="24"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="movie_search" width="14" height="14"/>
         <systemColor name="viewFlipsideBackgroundColor">
             <color red="0.12156862745098039" green="0.12941176470588237" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
