--- a/HookMemory/Movie/View/MoviePlayHeadCell.xib
+++ b/HookMemory/Movie/View/MoviePlayHeadCell.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -54,7 +53,7 @@
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rjK-w5-mUd">
                         <rect key="frame" x="122.33333333333333" y="184" width="5.9999999999999858" height="6"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="6" id="3oP-M1-o5S"/>
                             <constraint firstAttribute="width" constant="6" id="liQ-DK-syb"/>
@@ -136,8 +135,5 @@
         <image name="play_more_down" width="12" height="12"/>
         <image name="play_more_right" width="12" height="12"/>
         <image name="play_star" width="24" height="24"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
