--- a/HookMemory/Movie/View/MoviePlayHeadCell.xib
+++ b/HookMemory/Movie/View/MoviePlayHeadCell.xib
@@ -93,6 +93,7 @@
                         </connections>
                     </button>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="VEX-QR-aE9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1QP-Jr-P9p"/>
                     <constraint firstItem="kdD-Pp-SPc" firstAttribute="top" secondItem="Hpw-vn-fef" secondAttribute="bottom" id="5Tp-9E-XSc"/>
