--- a/HookMemory/Movie/View/MoviePlayHeadCategoryCell.xib
+++ b/HookMemory/Movie/View/MoviePlayHeadCategoryCell.xib
@@ -24,18 +24,27 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LRk-3M-VbV">
+                        <rect key="frame" x="0.0" y="0.0" width="184" height="69"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="LRk-3M-VbV" secondAttribute="bottom" id="69g-R5-9ZT"/>
+                <constraint firstItem="LRk-3M-VbV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="6Fd-G9-aXt"/>
                 <constraint firstAttribute="trailing" secondItem="vQE-kG-8bM" secondAttribute="trailing" id="HWa-g5-xHf"/>
+                <constraint firstItem="LRk-3M-VbV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="QW4-l4-720"/>
                 <constraint firstAttribute="bottom" secondItem="vQE-kG-8bM" secondAttribute="bottom" id="WBO-UM-ane"/>
                 <constraint firstItem="vQE-kG-8bM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YpE-6x-82I"/>
+                <constraint firstAttribute="trailing" secondItem="LRk-3M-VbV" secondAttribute="trailing" id="bT0-9z-cif"/>
                 <constraint firstItem="vQE-kG-8bM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="v1r-hf-ae3"/>
             </constraints>
             <size key="customSize" width="184" height="69"/>
             <connections>
+                <outlet property="imgV" destination="LRk-3M-VbV" id="K8X-d0-0wg"/>
                 <outlet property="nameL" destination="vQE-kG-8bM" id="Ero-qp-jnM"/>
             </connections>
             <point key="canvasLocation" x="209.16030534351145" y="26.408450704225352"/>
